--- a/index.html
+++ b/index.html
@@ -68,16 +68,20 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>How to build in minecraft</h2>
-										<p>Can minecraft be tought??</p>
+										<p>Can minecraft be tought?</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
 									<p>Minecraft building is unteachable but what can be teached is tricks and gimicks that can help.</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>1. The best tip I can give you is to look at what your trying to build bring up a photo use real life examples to be a template tweek to improve make look real with the squre blocks you have.
-2.Have a color palate stick to a a themthe photo and have a few different colors 2.Dont got to overboard but remeber you can like paccsio!
-3.Take a break after a long time let yo3. let your mind relax for a few days mabye even a week when you got a good idea write it down use it later</p>
+									<p>1. The best tip I can give you is to look at what your trying to build bring up a photo use real life examples to be a template tweek and improve make it look real with the squre blocks you have.
+
+2.Have a color tempalate stick to a theme 
+
+3.Dont got to overboard but remeber you can try everything out!
+
+4.Take a break after a long time let your mind relax for a few days mabye even a week when you got a good idea write it down use it later</p>
 								</div>
 							</div>
 						</div>
@@ -90,8 +94,8 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>The End</h2>
-							<p>I hope this guide helped you the reason why building can't be tought beacause everyone has there own unique style</p>
+							<h2>The End or is it..</h2>
+							<p>I hope this guide helped you the reason why building can't be tought beacause everyone has there own unique style but it's the end of the technique section </p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
