--- a/index.html
+++ b/index.html
@@ -75,13 +75,7 @@
 									<p>Minecraft building is unteachable but what can be teached is tricks and gimicks that can help.</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>1. The best tip I can give you is to look at what your trying to build bring up a photo use real life examples to be a template tweek and improve make it look real with the squre blocks you have.
-
-2.Have a color tempalate stick to a theme 
-
-3.Dont got to overboard but remeber you can try everything out!
-
-4.Take a break after a long time let your mind relax for a few days mabye even a week when you got a good idea write it down use it later</p>
+									<p>The reason it cant he tought is because everybody thinks differently has a different theme different potential</p>
 								</div>
 							</div>
 						</div>
@@ -94,10 +88,10 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>The End or is it..</h2>
-							<p>I hope this guide helped you the reason why building can't be tought beacause everyone has there own unique style but it's the end of the technique section </p>
+							<h2>Looks</h2>
+							<p>The best tip I can give you is to look at what your trying to build bring up a photo use real life examples to be a template tweek and improve make it look real with the squre blocks you have. Also Have a color tempalate stick to a theme.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p></p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -110,10 +104,10 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Steady Steady</h2>
+							<p>Dont got to overboard but remeber you can try everything out!Take a break after a long time let your mind relax for a few days mabye even a week when you got a good idea write it down use it later</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p></p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
