Added some links to the buttons

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</header>
 						<p></p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://www.youtube.com/channel/UCR9Gcq0CMm6YgTzsDxAxjOQ" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -109,7 +109,7 @@
 						</header>
 						<p></p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://www.youtube.com/channel/UCR9Gcq0CMm6YgTzsDxAxjOQ" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
