--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Fun Facts</h2>
+							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is why I wrote about it credits to Grain his youtube is on both learn more buttons even free advertizing to him he was not part of this</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
@@ -183,12 +183,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://minecraft.net/" class="icon alt fa-gamepad"><span class="label">Twitter</span></a></li>
+						<li><a href="https://minecraft.net/" class="icon alt fa-gamepad"><span class="label">Facebook</span></a></li>
+						<li><a href="https://minecraft.net/" class="icon alt fa-gamepad"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://minecraft.net/" class="icon alt fa-gamepad"><span class="label">Instagram</span></a></li>
+						<li><a href="https://minecraft.net/" class="icon alt fa-gamepad"><span class="label">GitHub</span></a></li>
+						<li><a href="https://minecraft.net/" class="icon alt fa-gamepad"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
