--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 					<div class="container">
 						<header>
 							<h2>Fun Facts</h2>
-							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is why I wrote about it credits to Grain his youtube is on both learn more buttons even free advertizing to him he was not part of this</p>
+							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is the reason why I wrote about it credits to Grain his youtube is on both learn more buttons even free advertizing to him he was not part of this</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
 								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
 								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
-							</div>
+						</div>
 						</form>
 					</div>
 				</section>
