Test and edited stuff

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Fun Facts</h2>
+							<p>I used Grains work please check out his youtube channel</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
+									<span class="icon alt major fa-minecraft"></span>
 									<h3>Ipsum sed commodo</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
@@ -168,8 +168,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Fun Facts</h2>
-							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is the reason why I wrote about it credits to Grain his youtube is on both learn more buttons even free advertizing to him he was not part of this</p>
+							<h2></h2>
+							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is the reason why I wrote about it credits to Grain his youtube channel is on both learn more buttons even free advertising to him he was not part of this</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
