--- a/index.html
+++ b/index.html
@@ -119,40 +119,40 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Fun Facts</h2>
+							<h2>Minecraft need to knows and do's</h2>
 							<p>I used Grains work please check out his youtube channel</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-minecraft"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-gamepad"></span>
+									<h3>Servers</h3>
+									<p>Dont be a noob join a server thats where stuff is happening.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-gamepad"></span>
+									<h3>Minecraft also has other cool features</h3>
+									<p>PVP guys.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-gamepad"></span>
+									<h3>Crafting</h3>
+									<p>Remeber crafting recipes.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-gamepad"></span>
+									<h3>So many hours on minecraft?</h3>
+									<p>Don't obsese over mincraft there are other games out there.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-gamepad"></span>
+									<h3>Not the best grafics</h3>
+									<p>Minecraft still has crappy graffics from way back when.</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon alt major fa-gamepad"></span>
+									<h3>Costum stuff</h3>
+									<p>Costum stuff is always better!.</p>
 								</section>
 							</div>
 						</div>
