Okay finnished I think...

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<header>
 							<h2>A guild to building in minecraft</h2>
 							<p>The limit is our imagination.<br />
-							This is not for any building pros.</p>
+							This is not for any building pros mabye the final tips is.</p>
 						</header>
 						<span class="image"><img src="http://vignette2.wikia.nocookie.net/hazeron/images/7/7b/Grass_block.png/revision/latest?cb=20110424124446" alt="" /></span>
 					</div>
@@ -89,7 +89,7 @@
 					<div class="content">
 						<header>
 							<h2>Looks</h2>
-							<p>The best tip I can give you is to look at what your trying to build bring up a photo use real life examples to be a template tweek and improve make it look real with the squre blocks you have. Also Have a color tempalate stick to a theme.</p>
+							<p>The best tip I can give you is to look at what your trying to build bring up a photo use real life examples to be a template tweak and improve make it look real with the square blocks you have. Also Have a color tempalate stick to a theme.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
