A space bar away -_-

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="content">
 						<header>
 							<h2>Steady Steady</h2>
-							<p>Dont got to overboard but remeber you can try everything out!Take a break after a long time let your mind relax for a few days mabye even a week when you got a good idea write it down use it later</p>
+							<p>Dont got to overboard but remeber you can try everything out! Take a break after a long time let your mind relax for a few days mabye even a week when you got a good idea write it down use it later.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
