--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>A guild to building in minecraft</h2>
+							<h2>A Guild To Building In Minecraft</h2>
 							<p>The limit is our imagination.<br />
 							This is not for any building pros mabye the final tips is.</p>
 						</header>
-						<span class="image"><img src="http://vignette2.wikia.nocookie.net/hazeron/images/7/7b/Grass_block.png/revision/latest?cb=20110424124446" alt="" /></span>
+						<span class="image"><img src="" alt="" /> </span><iframe width="560" height="315" src="https://www.youtube.com/embed/S1hEJQi7V2I" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
