--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>The limit is our imagination.<br />
 							This is not for any building pros mabye the final tips is.</p>
 						</header>
-						<span class="image"><img src="" alt="" /> </span><iframe width="560" height="315" src="https://www.youtube.com/embed/S1hEJQi7V2I" frameborder="0" allowfullscreen></iframe><" autoplay="autoplay">
+						<span class="image"><img src="" alt="" /> </span><iframe width="560" height="315" src="https://www.youtube.com/embed/S1hEJQi7V2I?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
