--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="https://minecraft.net/" class="button">If you haven't get minecraft!</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -173,8 +173,7 @@
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
+							
 						</div>
 						</form>
 					</div>
