Okay done finished finally!

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>A Guild To Building In Minecraft</h2>
-							<p>The limit is our imagination.<br />
-							This is not for any building pros mabye the final tips is.</p>
+							<h2>A Guide To Building In Minecraft</h2>
+							<p>The limit is our imagination.</p>
 						</header>
 						<span class="image"><img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt=""    main.css line 3403 remove border-radius width: 100px; height: 5; MARGIN-LEFT: auto; margin-right: auto margin-top: 13px;/> </span><iframe width="560" height="315" src="https://www.youtube.com/embed/S1hEJQi7V2I?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 					</div>
