--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Landed by HTML5 UP
+	A MC Guide To Building
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">A Guide</a></h1>
+					<h1 id="logo"><a href="index.html">A GFuide</a></h1>
 					<nav id="nav">
 						<ul>
 							
