--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">A GFuide</a></h1>
+					<h1 id="logo"><a href="http://www.minecraftforum.net/">A Guide</a></h1>
 					<nav id="nav">
 						<ul>
 							
