--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 							<h2>A Guide To Building In Minecraft</h2>
 							<p>The limit is our imagination.</p>
 						</header>
-						<span class="image"><img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt=""    main.css line 3403 remove border-radius width: 100px; height: 5; MARGIN-LEFT: auto; margin-right: auto margin-top: 13px;/> </span><iframe width="560" height="315" src="https://www.youtube.com/embed/S1hEJQi7V2I?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-					</div>
+						<span class="image"><img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt=""    main.css line 3403 remove border-radius width: 100px; height: 5; MARGIN-LEFT: auto; margin-right: auto margin-top: 13px;/> </span><iframe width="560" height="315" <img style="-webkit-user-select: none; cursor: zoom-in;" src="http://files.enjin.com/930884/images/minecraft-logo.gif" width="722" height="245">					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
