--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<h2>A Guide To Building In Minecraft</h2>
 							<p>The limit is our imagination.</p>
 						</header>
-						<span class="image"><img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt="" style="border-radius: 0px,  width: 100px, height: 5px, margin-left: auto, margin-right: auto, margin-top: 13px"/> </span> <marquee> <img src="-webkit-user-select: none; cursor: zoom-in;" src="http://files.enjin.com/930884/images/minecraft-logo.gif" style="margin-left:auto, margin-right:auto"/></marquee>				</div>
+						<span class="image"><img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt="" style="border-radius: 200%,  width: 100px, height: 5px, margin-left: auto, margin-right: auto, margin-top: 13px"/> </span> <marquee> <img src="-webkit-user-select: none; cursor: zoom-in;" src="http://files.enjin.com/930884/images/minecraft-logo.gif" style="margin-left:auto, margin-right:auto"/></marquee>				</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
