--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 							<p>The limit is our imagination.</p>
 						</header>
 						<span class="image">
-							<img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt="" style="width: 50px; height: 5px; margin-left: auto; margin-right: auto; margin-top: 13px";/> 
+							<img src="http://vignette4.wikia.nocookie.net/tekkitlite/images/c/c7/Grass_Block.png/revision/latest?cb=20130330023052" alt="" style="width: 250px; height: 250px; margin-left: auto; margin-right: auto; margin-top: 13px";/> 
 						</span> 
-						<marquee> 
+						<marquee scrollamount="10"> 
 						<img src="http://files.enjin.com/930884/images/minecraft-logo.gif" style="margin-left:auto, margin-right:auto"/></marquee>				</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
