--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="http://ptgmedia.pearsoncmg.com/images/chap3_9780789753571/elementLinks/03fig11.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Looks</h2>
@@ -84,7 +84,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="http://rack.3.mshcdn.com/media/ZgkyMDEzLzAyLzA4LzE3L3dpbnRlcnBhbGFjLmVkNjRjLmpwZwpwCXRodW1iCTg1MHg4NTA-CmUJanBn/7ad8d7dd/f01/winter-palace.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Steady Steady</h2>
@@ -103,7 +103,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Minecraft need to knows and do's</h2>
-							<p>I used Grains work please check out his youtube channel</p>
+							<p>I used Grain's work please check out his youtube channel</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
@@ -134,8 +134,8 @@
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-gamepad"></span>
-									<h3>Costum stuff</h3>
-									<p>Costum stuff is always better!.</p>
+									<h3>Comand Blocks</h3>
+									<p>Learn how to use comand blocks.</p>
 								</section>
 							</div>
 						</div>
