--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 					<div class="container">
 						<header>
 							<h2></h2>
-							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is the reason why I wrote about it credits to Grain his youtube channel is on both learn more buttons even free advertising to him he was not part of this</p>
+							<p>If you really took the time to read this hole thing I am not obsesed with minecraft but it was just a challenging topic that is the reason why I wrote about it credits to Grain his youtube channel is on both learn more buttons even free advertising to him he was not part of this oh BTW here is a game you can play <p data-height="268" data-theme-id="0" data-slug-hash="RaLGwe" data-default-tab="result" data-user="Anonymous_Coder" class="codepen">See the Pen <a href="http://codepen.io/Anonymous_Coder/pen/RaLGwe/">Color Blast!</a> by Jason (<a href="http://codepen.io/Anonymous_Coder">@Anonymous_Coder</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script></p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
